--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <title>Movies</title>
     <meta name="viewport" content="initial-scale=1.0">
     <meta charset="utf-8">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="script.js"></script>
     
 </head>
 <title>
@@ -13,22 +15,29 @@
 
 <h1>Check out these movies!</h1>
 
-<div id="Filter">
+<div id="getMovies">
     <h2>*********</h2>
-    <button type="button" onclick="filter()">Filter</button>
+    <button type="button" onclick="GetMovies()">Get Movies</button>
   </div>
-
+<div id="table">
 <table>
-    <tr>
+    <thead>
         <th>Title</th>
         <th>Genre</th>
         <th>Director</th>
+    </thead>
+<tbody>
+    <tr>
+    <td></td>
     </tr>
-
+</tbody>
 </table>
+
+
+</div>
 <div id="Add">
     <h2>*********</h2>
-    <button type="button" onclick="doIt()">Add</button>
+    <button type="button" onclick="thing()">Add</button>
   </div>
 <div id="Remove">
     <h2>*********</h2>
@@ -36,6 +45,8 @@
 </div>
 
 
-<script src="script.js"></script>
+
+
+
 </body>
 </html>
