Created box for user to input fields for movie they would like to add

--- a/index.html
+++ b/index.html
@@ -39,6 +39,29 @@
     <h2>*********</h2>
     <button type="button" onclick="thing()">Add</button>
   </div>
+  <form>
+      <fieldset>
+          <legend>Add Movie</legend>
+          <p>
+              <label>Title</label>
+              <input type = "text"
+              id = "title"
+              value = "Title Of Movie"/>
+          </p>
+          <p>
+                <label>Genre</label>
+                <input type = "text"
+                id = "genre"
+                value = "Type Of Genre"/>
+            </p>
+            <p>
+                    <label>Director</label>
+                    <input type = "text"
+                    id = "director"
+                    value = "Name Of Director"/>
+                </p>
+      </fieldset>
+  </form>
 <div id="Remove">
     <h2>*********</h2>
     <button type="button" onclick="remove()">Remove</button>
