Created p line for user to read when searching

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
     <form id="SearchMovie">
         <fieldset>
             <legend>Search</legend>
+            <p>Please use proper capitalization and punctuation or you may not get your desired results.</p>
             <p>
                 <label>Search</label>
                 <input type="text" id="search" name="search"/>
